--- a/style.css
+++ b/style.css
@@ -145,56 +145,100 @@ footer {
 
 
         /* Cube */
-.wrap {
-                margin-top: 150px;
-                perspective: 1000px;
-                perspective-origin: 50% 50%;
-                background-size: 80px 80px;
-                margin-bottom: 100px; /* Ajoute une marge en bas pour éviter que le cube n'empiète */
-            }
+ #wrapper {
+  padding-top: 3%;
+        padding-bottom: 3%;}
 
-            .cube {
-                margin: auto;
-                position: relative;
-                height: 200px;
-                width: 200px;
-                transform-style: preserve-3d;
-            }
+.viewport {
+  -webkit-perspective: 800px;
+  -moz-perspective: 800px;
+  -ms-perspective: 800px;
+  -o-perspective: 800px;
+  perspective: 800px;
+  -webkit-perspective-origin: 50% 200px;
+  -moz-perspective-origin: 50% 200px;
+  -ms-perspective-origin: 50% 200px;
+  -o-perspective-origin: 50% 200px;
+  perspective-origin: 50% 200px;
+  -webkit-transform: scale(0.8, 0.8);
+  -moz-transform: scale(0.8, 0.8);
+  -ms-transform: scale(0.8, 0.8);
+  -o-transform: scale(0.8, 0.8);
+  transform: scale(0.8, 0.8);
+}
 
-                .cube div {
-                    position: absolute;
-                    padding: 10px;
-                    box-sizing: border-box;
-                    height: 100%;
-                    width: 100%;
-                    background-color: #fff;
-                    border: solid 1px #eee;
-                    color: #fff;
-                    font: 10px arial;
-                    transition: transform 0.2s ease-in;
-                }
+.cube {
+  position: relative;
+  margin: 0 auto;
+  height: 200px;
+  width: 200px;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  -o-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-transform: rotateX(136deg) rotateY(1122deg);
+  -moz-transform: rotateX(136deg) rotateY(1122deg);
+  -ms-transform: rotateX(136deg) rotateY(1122deg);
+  -o-transform: rotateX(136deg) rotateY(1122deg);
+  transform: rotateX(136deg) rotateY(1122deg);
+animation: rotateCube 20s infinite linear;}
 
-            @keyframes rotate {
-                from {
+@keyframes rotateCube {
+  from {
                     transform: rotateX(0deg) rotateY(0deg);
                 }
 
                 to {
                     transform: rotateX(360deg) rotateY(360deg);
-                }
-            }
-
-            .cube, .animation {
-                animation: rotate 20s infinite linear;
-            }
-
+  }
+}
 .cube:hover {
-    animation-play-state: paused;
+  animation: none;
 }
 
-.no-animation {
-    animation: none !important; /* Désactivez l'animation */
-}
+.cube > div {
+  overflow: hidden;
+  position: absolute;
+  height: 200px;
+  width: 200px;
+  background-color: white;
+  -webkit-touch-callout: none;
+  -moz-touch-callout: none;
+  -ms-touch-callout: none;
+  -o-touch-callout: none;
+  touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;}
+
+.cube > div > div.cube-image {
+  width: 200px;
+  height: 200px;
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+  line-height: 200px;
+  font-size: 80px;
+  text-align: center;
+  color: #000;
+  -webkit-transition: color 600ms;
+  -moz-transition: color 600ms;
+  -ms-transition: color 600ms;
+  -o-transition: color 600ms;
+  transition: color 600ms;}
+  .cube > div > div.cube-image.active {
+    color: red; }
+
+.cube > div:hover {
+  cursor: grabbing; }
+
+.cube > div:active {
+  cursor: grabbing; }
 
 
 /* Classes pour les titres ODD */
