--- a/style.css
+++ b/style.css
@@ -17,6 +17,14 @@ p {
   margin: 15px 0;
 }
 
+canvas {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
 /* Styles pour les liens */
 a {
     color: #000; /* Couleur du texte en noir */
