--- a/style.css
+++ b/style.css
@@ -238,9 +238,11 @@ padding: 0px 20px 20px 20px;
 }
 
 .page18 {
-background-color:#96526B;
-
-background-blend-mode: multiply;}
+background: linear-gradient(#fff, #fff) padding-box,
+linear-gradient(to right, #e5243b, #DDA63A, #4C9F38, #C5192D, #FF3A21, #26BDE2, #FCC30B, #A21942, #FD6925, #DD1367, #FD9D24, #BF8B2E, #3F7E44, #0A97D9, #56C02B, #00689D, #19486A) border-box;
+border: 2px solid transparent;
+    color: black!important;
+}
 
 .credits {
     padding: 10px; /* Ajoutez un peu de rembourrage pour aérer le texte */
