--- a/style.css
+++ b/style.css
@@ -81,13 +81,14 @@ header img {
 }
 
 canvas {
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 100%; /* Le canvas ne dépassera pas la largeur de son conteneur */
+    height: auto; /* La hauteur s'ajustera automatiquement pour conserver les proportions */
     display: block;
-    width: 100%;
+    margin: 0 auto; /* Centre le canvas horizontalement */
+    padding: 0; /* Supprime les marges internes */
+    box-sizing: border-box; /* Inclut la bordure et le padding dans la largeur totale */
 }
+
 
 /* Styles pour chaque icône */
 .icon {
